tests/rosetta/out/C/anagrams.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
const char *sortRunes(char *s) {
  list_string tmp1 = {0, NULL};
  int arr = tmp1;
  int i = 0;
  while (i < strlen(s)) {
    char *tmp2 = slice_string(s, i, i + 1);
    list_string tmp3 = list_string_create(1);
    tmp3.data[0] = tmp2;
    list_string tmp4 = concat_list_string(arr, tmp3);
    arr = tmp4;
    i = i + 1;
  }
  int n = arr.len;
  int m = 0;
  while (m < n) {
    int j = 0;
    while (j < n - 1) {
      if ((strcmp(arr.data[j], arr.data[j + 1]) > 0)) {
        const char *tmp = arr.data[j];
        arr.data[j] = arr.data[j + 1];
        arr.data[j + 1] = tmp;
      }
      j = j + 1;
    }
    m = m + 1;
  }
  const char *out = "";
  i = 0;
  while (i < n) {
    char *tmp5 = concat_string(out, arr.data[i]);
    out = tmp5;
    i = i + 1;
  }
  return out;
}

int sortStrings(list_string xs) {
  list_string tmp6 = {0, NULL};
  int res = tmp6;
  int tmp = xs;
  while (tmp.len > 0) {
    const char *min = tmp.data[0];
    int idx = 0;
    int i = 1;
    while (i < tmp.len) {
      if (((strcmp(tmp.data[i], min) < 0))) {
        min = tmp.data[i];
        idx = i;
      }
      i = i + 1;
    }
    list_string tmp7 = list_string_create(1);
    tmp7.data[0] = min;
    list_string tmp8 = concat_list_string(res, tmp7);
    res = tmp8;
    list_string tmp9 = {0, NULL};
    int out = tmp9;
    int j = 0;
    while (j < tmp.len) {
      if (j != idx) {
        list_string tmp10 = list_string_create(1);
        tmp10.data[0] = tmp.data[j];
        list_string tmp11 = concat_list_string(out, tmp10);
        out = tmp11;
      }
      j = j + 1;
    }
    tmp = out;
  }
  return res;
}

int main() {
  list_string words = list_string_create(30);
  words.data[0] = "abel";
  words.data[1] = "able";
  words.data[2] = "bale";
  words.data[3] = "bela";
  words.data[4] = "elba";
  words.data[5] = "alger";
  words.data[6] = "glare";
  words.data[7] = "lager";
  words.data[8] = "large";
  words.data[9] = "regal";
  words.data[10] = "angel";
  words.data[11] = "angle";
  words.data[12] = "galen";
  words.data[13] = "glean";
  words.data[14] = "lange";
  words.data[15] = "caret";
  words.data[16] = "carte";
  words.data[17] = "cater";
  words.data[18] = "crate";
  words.data[19] = "trace";
  words.data[20] = "elan";
  words.data[21] = "lane";
  words.data[22] = "lean";
  words.data[23] = "lena";
  words.data[24] = "neal";
  words.data[25] = "evil";
  words.data[26] = "levi";
  words.data[27] = "live";
  words.data[28] = "veil";
  words.data[29] = "vile";
  int words = words;
  map_string_int tmp12 = map_string_int_create(0);
  int groups = tmp12;
  int maxLen = 0;
  for (int tmp13 = 0; tmp13 < words.len; tmp13++) {
    char *w = words.data[tmp13];
    const char *k = sortRunes(w);
    if ((!(k in groups))) {
      list_string tmp14 = list_string_create(1);
      tmp14.data[0] = w;
      list_string tmp15 = list_string_create(1);
      tmp15.data[0] = w;
      groups.data[k] = tmp15;
    } else {
      list_string tmp16 = list_string_create(1);
      tmp16.data[0] = w;
      list_string tmp17 = concat_list_string(groups.data[k], tmp16);
      list_string tmp18 = list_string_create(1);
      tmp18.data[0] = w;
      list_string tmp19 = concat_list_string(groups.data[k], tmp18);
      groups.data[k] = tmp19;
    }
    if ((groups.data[k].len > maxLen)) {
      maxLen = groups.data[k].len;
    }
  }
  map_string_int tmp20 = map_string_int_create(0);
  int printed = tmp20;
  for (int tmp21 = 0; tmp21 < words.len; tmp21++) {
    char *w = words.data[tmp21];
    const char *k = sortRunes(w);
    if (groups.data[k].len == maxLen) {
      if ((!(k in printed))) {
        int g = sortStrings(groups.data[k]);
        char *tmp22 = concat_string("[", g.data[0]);
        const char *line = tmp22;
        int i = 1;
        while (i < g.len) {
          char *tmp23 = concat_string(line, " ");
          char *tmp24 = concat_string(tmp23, g.data[i]);
          line = tmp24;
          i = i + 1;
        }
        char *tmp25 = concat_string(line, "]");
        line = tmp25;
        printf("%s\n", line);
        printed.data[k] = 1;
      }
    }
  }
}

int main() {
  main();
  return 0;
}
